# back_fastshop

./: .gitignore  Dockerfile  README.md  alembic.ini  database.py  deps.py  docker-compose.yml  fastshop.db  logicgraphql.py  main.py  messages.py  models.py  pyproject.toml  requirements.txt  schemagraphql.py  schemas.py  security.py  settings.py  utils.py
admin/: settings.py
logics/: product.py
nginx/: nginx.conf
routers/: basket.py  orders.py  products.py  users.py
shop/: admin.py  apps.py  models.py
templates/admin/: change_list.html
templates/email/: confirm-change-password.txt  confirm-registration.txt  notify-order-tocustomer.txt  notify-order-tome.txt  notify-payd-customer.txt  reset-password.txt  send-password.txt
