[tool.poetry]
name = "fastshop"
version = "0.1.0"
description = "Online shop of goods"
authors = ["Antonio <tosha.glyzin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.0"
alembic = "^1.9.2"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
python-dotenv = "^0.21.1"
pydantic = {extras = ["email"], version = "^1.10.4"}
firebase-admin = "^6.0.1"
fastapi-mail = "^1.2.5"
psycopg2-binary = "^2.9.5"
django = "^4.1.5"
dj-database-url = "^1.2.0"
whitenoise = "^6.3.0"
pillow = "^9.4.0"
django-cors-headers = "^3.13.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.155.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
